[zive.tv] Updated Slido and Youtube widget for next Caffe

--- a/zive.tv/src/html/topmonks-caffe/index.njk
+++ b/zive.tv/src/html/topmonks-caffe/index.njk
@@ -185,10 +185,10 @@
     </h1>
   </header>
   <div class="restream-box" style="--aspect-ratio: 16/9;">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/TRP5_avvfQc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/yMVM4vTqk3k" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
   <div class="slido-box">
-    <iframe src="https://app.sli.do/event/mqo0cdn4" height="100%" width="100%" frameBorder="0"
+    <iframe src="https://app.sli.do/event/eye6xpdd" height="100%" width="100%" frameBorder="0"
             style="min-height: 560px;"></iframe>
   </div>
 </main>
