--- a/chytrybox.cz/src/stylesheets/hp.scss
+++ b/chytrybox.cz/src/stylesheets/hp.scss
@@ -2,42 +2,33 @@
 
 .intro {
   color: var(--postcube-primary);
-
-  .intro__content {
-    align-self: center;
-  }
+  background-image: url("/assets/img/deliveryman.jpg");
+  background-size: 45% auto;
+  background-position: left center;
+  background-repeat: no-repeat;
 
   p {
     max-width: 480px;
     font-size: 24px;
   }
-}
 
-// How it works //
-
-.how-it-works {
-  h3 {
-    max-width: 240px;
-    margin: 0 auto;
-  }
-
-  p {
-    max-width: 325px;
-  }
 }
 
 // About PostCube //
 .about-postCube {
   padding: 120px 0 200px;
   text-align: center;
-  p {
+
+  h3, p {
     max-width: 325px;
     margin: 20px auto;
   }
+
   .button {
     margin-top: 40px;
   }
 }
+
 
 // Special Interest Group - SIG //
 .SIG {
@@ -54,7 +45,7 @@
       margin: 0;
       @media screen and (min-width: 840px) {
         font-size: 66px;
-        line-height: 72px;
+        line-height: 80px;
       }
       @media (max-width: 839px) {
         font-size: 40px;
@@ -66,8 +57,9 @@
   .SIG__clients {
     p {
       max-width: 400px;
-      margin: 0 auto;
+      margin: 14px auto;
     }
+
     @media screen and (min-width: 840px) {
       border-left: 1px solid white;
     }
@@ -77,22 +69,31 @@
 // Quotation //
 .quotation {
   color: var(--postcube-primary);
-  .quotation__title {
+
+  h2 {
     font-size: 44px;
     font-weight: 800;
     line-height: 58px;
     margin-bottom: 0;
   }
+
+  p {
+    font-size: 26px;
+    margin-top: 10px;
+  }
 }
+
 
 // How it Works //
 .how-it-works {
   padding: 120px 0 200px;
   text-align: center;
+
   p {
     max-width: 325px;
     margin: 20px auto;
   }
+
   .button {
     margin-top: 40px;
   }
@@ -101,9 +102,78 @@
 // Download the App //
 .download-app {
   background-color: var(--postcube-primary);
-  h2,p {
+
+  h2, p {
     color: var(--postcube-white);
     text-align: left;
     max-width: 420px;
+  }
+}
+
+// FAQ //
+.FAQ {
+  h2 {
+    max-width: 420px;
+  }
+}
+
+// Contact //
+.contact {
+  background: var(--postcube-primary);
+  color: var(--postcube-white);
+  text-align: left;
+
+  .contact__title {
+    max-width: 400px;
+
+    h2 {
+      margin-bottom: 0;
+    }
+  }
+
+  .contact__content {
+    max-width: 740px;
+    margin: 0 auto;
+  }
+
+  .contact__form {
+    input {
+      background: var(--postcube-white);
+      border: none;
+      height: 48px;
+      width: 80%;
+      padding-left: 20px;
+      margin-bottom: 20px;
+    }
+
+    .submit-button {
+      align-self: center;
+      button {
+        font-size: 20px;
+        color: var(--postcube-black);
+        background: var(--postcube-secondary);
+        border: none;
+        width: 100%;
+        height: 50px;
+        &:hover {
+          cursor: pointer;
+          background: var(--postcube-secondary-light);
+        }
+      }
+    }
+  }
+
+  .contact__info {
+    a {
+      font-size: 40px;
+      font-weight: 800;
+      text-decoration: none;
+    }
+    a.info--number {
+      color: var(--postcube-white);
+    }
+    a.info--email {
+      color: var(--postcube-secondary);
+    }
   }
 }
