Some typos fixed

--- a/www.hookamonk.com/src/html/catering/index.njk
+++ b/www.hookamonk.com/src/html/catering/index.njk
@@ -91,7 +91,7 @@
         </div>
         <div>
           <h3 hm-section-features__feature>Say goodbye to charcoals</h3>
-          <p>Hookamonk is completely charcoal-less hookah. Tobacco is heated by spiral controlled by smart electronic device. No more dirty job and bed smell at your place.
+          <p>Hookamonk is completely charcoal-less hookah. Tobacco is heated by spiral controlled by smart electronic device. No more dirty job and bad smell at your place.
         </p>
         </div>
       </div>
@@ -104,7 +104,7 @@
         </div>
         <div>
           <h3>Consistent and full taste</h3>
-          <p>With hookamonk, the taste of tobacco remains full and constant during the session. No extra tweaking needed and even hookah beginner can shine with a delicious hookah.</p>
+          <p>With hookamonk, the taste of tobacco remains full and constant during the whole session. No extra tweaking needed and even hookah beginner can shine with a delicious hookah.</p>
         </div>
       </div>
       <div
@@ -129,7 +129,7 @@
         </div>
         <div>
           <h3>No burnt furniture</h3>
-          <p>Charcoals can easily burn your precious club furniture. No more burnt spots with Hookamonk.</p>
+          <p>Charcoals can easily burn your precious club furniture. No more burn marks with Hookamonk.</p>
         </div>
       </div>
       <div
@@ -141,7 +141,7 @@
         </div>
         <div>
           <h3>Pay per use</h3>
-          <p>You will pay us at the end of each month based on number of shishas served, no initial downpayments. We earn when you earn. You earn, when your customers are returning. Truly a win-win-win situation. Individual plans available.</p>
+          <p>You will pay us at the end of each month based on number of shishas served, no initial downpayments. We earn when you earn. You earn, when your customers enjoy smoking at your place. A truly win-win-win situation. Individual plans available.</p>
         </div>
       </div>
       <div
@@ -153,7 +153,7 @@
         </div>
         <div>
           <h3>Smart inhale detection</h3>
-          <p>Electronic head reacts to inhales. The tobacco is warmed only when you breath in, the right temperature is intelligently kept otherwise. No more unpleasant sessions caused by bad charcoal management.</p>
+          <p>Electronic head reacts to inhales. The tobacco is warmed only when you breath in, the just right temperature is intelligently kept otherwise. No more unpleasant sessions caused by bad charcoal management.</p>
         </div>
       </div>
       <div
