--- a/www.hookamonk.com/src/html/catering/index.njk
+++ b/www.hookamonk.com/src/html/catering/index.njk
@@ -237,26 +237,36 @@
         <h2 class="hm-h2">Products</h2>
       </div>
       <div
-        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6 mdc-layout-grid__cell--align-middle hm-order-desktop--2">
+        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6 mdc-layout-grid__cell--align-middle hm-order-desktop--1">
         <h3 class="hm-h2">Mobile box</h3>
-        <p>Portable version of hookamonk ready to be to used it anywhere. All you need is a source of electricity and a wifi connection.</p>
+        <p>Portable version of hookamonk ready to be to used it anywhere. All you need is a source of electricity. Flip it, stack it or just let the shisha stand next to the computer according to your mood. </p>
       </div>
       <div
         class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6 hm-order-desktop--1">
         <img title="Hookamonk box product photo"
              alt="[photo] Hookamonk box product photo"
              class="img-fullwidth-phone hk-img-product"
-             src="{{ "hookamonk.com/img_box.png" | cloudinaryUrl(width=530) }}"
-             srcset="{{ "hookamonk.com/img_box.png" | cloudinaryUrl(width=530) }} 1x,
-                     {{ "hookamonk.com/img_box.png" | cloudinaryUrl(width=530,dpr=1.5) }} 1.5x,
-                     {{ "hookamonk.com/img_box.png" | cloudinaryUrl(width=530,dpr=2) }} 2x" />
+             src="{{ "hookamonk.com/hookamonk_set_next.jpg" | cloudinaryUrl(width=530) }}"
+             srcset="{{ "hookamonk.com/hookamonk_set_next.jpg" | cloudinaryUrl(width=530) }} 1x,
+                     {{ "hookamonk.com/hookamonk_set_next.jpg" | cloudinaryUrl(width=530,dpr=1.5) }} 1.5x,
+                     {{ "hookamonk.com/hookamonk_set_next.jpg" | cloudinaryUrl(width=530,dpr=2) }} 2x" />
+      </div>
+      <div
+        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6 hm-order-desktop--2">
+        <img title="Hookamonk box product photo"
+             alt="[photo] Hookamonk box product photo"
+             class="img-fullwidth-phone hk-img-product"
+             src="{{ "hookamonk.com/hookamonk_set_tower.jpg" | cloudinaryUrl(width=530) }}"
+             srcset="{{ "hookamonk.com/hookamonk_set_tower.jpg" | cloudinaryUrl(width=530) }} 1x,
+                     {{ "hookamonk.com/hookamonk_set_tower.jpg" | cloudinaryUrl(width=530,dpr=1.5) }} 1.5x,
+                     {{ "hookamonk.com/hookamonk_set_tower.jpg" | cloudinaryUrl(width=530,dpr=2) }} 2x" />
       </div>
     </div>
     <div class="mdc-layout-grid__inner tm-layout-wrapper hm-section-products">
       <div
         class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6 mdc-layout-grid__cell--align-middle">
         <h3 class="hm-h2">Table</h3>
-        <p>Specific table meticulously designed for hookamonk. Display is built in. All electronic is built in. Plug in in our shisha with an electronic head and off you go.</p>
+        <p>We are ready for your custom requirements, when all the electronics is integrated directly to your existing table. Plug in in our shisha with an electronic head and off you go.</p>
       </div>
       <div
         class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
@@ -267,22 +277,6 @@
              srcset="{{ "hookamonk.com/img_table.png" | cloudinaryUrl(width=530) }} 1x,
                      {{ "hookamonk.com/img_table.png" | cloudinaryUrl(width=530,dpr=1.5) }} 1.5x,
                      {{ "hookamonk.com/img_table.png" | cloudinaryUrl(width=530,dpr=2) }} 2x"/>
-      </div>
-    </div>
-  </div>
-  <div class="mdc-layout-grid">
-    <div class="mdc-layout-grid__inner tm-layout-wrapper">
-      <div
-        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12" style="text-align: center">
-        <h2 class="hm-h2">Overview</h2>
-        <div class="hm-video-wrapper">
-          <video class="hm-overview-video" playsinline autoplay loop muted>
-            <source src="https://res.cloudinary.com/topmonks/video/upload/f_mp4,w_800/v1607417422/hookamonk.com/hookamonk_animace.mov" type="video/mp4">
-            <source src="https://res.cloudinary.com/topmonks/video/upload/f_webm,w_800/v1607417422/hookamonk.com/hookamonk_animace.mov" type="video/webm">
-            <source src="https://res.cloudinary.com/topmonks/video/upload/f_ogg,w_800/v1607417422/hookamonk.com/hookamonk_animace.mov" type="video/ogg">
-            Your browser does not support the video tag.
-          </video>
-        </div>
       </div>
     </div>
   </div>
