--- a/www.hookamonk.com/src/html/catering/index.njk
+++ b/www.hookamonk.com/src/html/catering/index.njk
@@ -239,7 +239,7 @@
       <div
         class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6 mdc-layout-grid__cell--align-middle hm-order-desktop--1">
         <h3 class="hm-h2">Mobile box</h3>
-        <p>Portable version of hookamonk ready to be to used anywhere. All you need is a source of electricity. Flip it, stack it or just let the shisha rest next to the computer according to your mood. </p>
+        <p>Portable version of hookamonk ready to be used anywhere. All you need is a source of electricity. Flip it, stack it or just let the shisha rest next to the computer according to your mood. </p>
       </div>
       <div
         class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6 hm-order-desktop--1">
