Post cube - vytváření obsahu stránky
HTML + CSS

--- a/postcube.cz/src/html/index.njk
+++ b/postcube.cz/src/html/index.njk
@@ -11,5 +11,47 @@
   <meta property="og:type" content="company">
   <meta property="og:url" content="https://www.postcube.cz/">
   <meta property="og:site_name" content="postcube.cz">
+{% endblock %}
+
+{% block content %}
+  <section id="main-info" class="main-info">
+    <div class="mdc-layout-grid">
+      <div class="mdc-layout-grid__inner layout-wrapper">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+        </div>
+        <div class="main-info__content mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+          <h1>Nečekejte na kurýra</h1>
+          <p>Je spousta lepších činností než čekání na kurýra. S&nbsp;chytrou
+            schránkou PostCube si zásilku vyzvednete, až vy budete&nbsp;chtít!
+            <b>#necekamnakuryra</b></p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section id="about" class="about mdc-layout-grid">
+    <div class="mdc-layout-grid__inner layout-wrapper">
+      <div class="mdc-layout-grid__cell">
+        <h3>Pro radost z&nbsp;nakupování</h3>
+        <p>Svou zásilku už nikdy nezmeškáte. Doručí vám ji, i&nbsp;když právě
+          nejste doma. A&nbsp;díky mobilní aplikaci máte o&nbsp;všem přehled.</p>
+      </div>
+      <div class="mdc-layout-grid__cell">
+        <h3>Příjem i&nbsp;odesílání zásilek</h3>
+        <p>PostCube vyzvedává a odesílá zásilky za vás. Při objednávce stačí
+          zadat jen číslo schránky a při odesílání vyplnit údaje
+          o&nbsp;příjemci.</p>
+      </div>
+      <div class="mdc-layout-grid__cell">
+        <h3>Bezkontaktní a jednoduché</h3>
+        <p>Kovová PostCube funguje přes Bluetooth. Nepotřebujete kabel, připojení
+          k&nbsp;internetu, klíč ani si pamatovat PIN&nbsp;kód.</p>
+      </div>
+      <div class="button mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+        <a href="#contact" class="btn action-btn">Objednat PostCube</a>
+      </div>
+    </div>
+  </section>
+
 
 {% endblock %}
