--- a/postcube.cz/src/html/layouts/main.njk
+++ b/postcube.cz/src/html/layouts/main.njk
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# business: http://ogp.me/ns/business#">
+<html lang="cs" prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# business: http://ogp.me/ns/business#">
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -12,36 +12,32 @@
   <link rel="dns-prefetch" href="https://www.google-analytics.com">
   <link rel="preconnect" href="https://res.cloudinary.com">
   {% block preconnect %}{% endblock %}
-  <link rel="preload" as="script" href="https://www.googletagmanager.com/gtag/js?id=GTM-N3RNTWG">
+  <link rel="preload" as="script" href="https://www.googletagmanager.com/gtm.js?id=GTM-WW7T986">
   {% block preload %}{% endblock %}
 
   <!--[if lt IE 9]>
   <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   <![endif]-->
-
-  <!-- Google Tag Manager -->
-  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-        new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-      j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-      'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-N3RNTWG');</script>
-  <!-- End Google Tag Manager -->
-
-  <link href="/favicon-small.png" rel="shortcut icon" type="image/png">
-  {{ css("typography") }}
-  {{ css("main") }}
+  <link rel="stylesheet" href="/assets/css/typography.css">
+  <link rel="stylesheet" href="/assets/css/main.css">
 
   {% block head %}{% endblock %}
 </head>
-<body id="page-{{page}}">
-{% include "../components/header.njk" %}
-<main>
+<body id="page-{{page}}" vocab="https://schema.org/" typeof="{{ pageType or 'WebPage' }}">
+
+{% include 'components/header.njk' %}
+
+<main id="content">
   {% block content %}{% endblock %}
 </main>
-{% block footer %}{% endblock %}
 
-{{ spriteTarget() }}
+<link rel="stylesheet" href="/assets/css/footer.css">
+{% include 'components/footer.njk' %}
+
 
 {% block javascript %}{% endblock %}
+
 </body>
 </html>
+
