Post Cube - new website - HTML + CSS

--- a/postcube.cz/src/html/components/footer.njk
+++ b/postcube.cz/src/html/components/footer.njk
@@ -1,10 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+<footer>
+  <div class="mdc-layout-grid layout-wrapper">
+    <div class="mdc-layout-grid__inner">
+      <div class="footer__list mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+        <ul>
+          <li><a href="/PP">Privacy policy</a></li>
+          <li><a href="/TC">Terms & Conditions</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</footer>
