--- a/postcube.cz/src/html/index.njk
+++ b/postcube.cz/src/html/index.njk
@@ -11,8 +11,17 @@
   <meta property="og:type" content="company">
   <meta property="og:url" content="https://www.postcube.cz/">
   <meta property="og:site_name" content="postcube.cz">
-{% endblock %}
 
+
+  <style>
+    img {
+      width: 100%;
+      height: auto;
+    }
+  </style>
+
+{% endblock %}
+{% include 'components/header.njk' %}
 {% block content %}
   <section id="main-info" class="main-info">
     <div class="mdc-layout-grid">
@@ -29,20 +38,23 @@
     </div>
   </section>
 
-  <section id="about" class="about mdc-layout-grid">
+  <section id="about" class="about icon-section mdc-layout-grid">
     <div class="mdc-layout-grid__inner layout-wrapper">
-      <div class="mdc-layout-grid__cell">
+      <div class="icon-section__content mdc-layout-grid__cell">
+        <svg xmlns="http://www.w3.org/2000/svg" width="30.412" height="48.659" viewBox="0 0 30.412 48.659"><defs><style>.a{fill:#1538e5;}</style></defs><g transform="translate(-297.293 -654.072)"><path class="a" d="M25.85,0H4.562A4.563,4.563,0,0,0,0,4.562V44.1a4.563,4.563,0,0,0,4.562,4.562H25.85A4.563,4.563,0,0,0,30.412,44.1V4.562A4.563,4.563,0,0,0,25.85,0ZM15.206,45.618a3.041,3.041,0,1,1,3.041-3.041A3.038,3.038,0,0,1,15.206,45.618ZM25.85,35.354a1.144,1.144,0,0,1-1.14,1.14H5.7a1.144,1.144,0,0,1-1.14-1.14V5.7A1.144,1.144,0,0,1,5.7,4.562H24.71A1.144,1.144,0,0,1,25.85,5.7Z" transform="translate(297.293 654.072)"/><path class="a" d="M14.252,9.036H5.974l.185.9h7.579a.678.678,0,0,1,.661.828l-.156.685a1.582,1.582,0,1,1-1.8.294H6.528A1.581,1.581,0,1,1,4.634,11.5l-1.984-9.7H.678A.678.678,0,0,1,0,1.129V.678A.678.678,0,0,1,.678,0h2.9a.678.678,0,0,1,.664.542L4.5,1.807H15.586a.678.678,0,0,1,.661.828L14.912,8.508A.678.678,0,0,1,14.252,9.036Z" transform="translate(303.553 667.774)"/></g></svg>
         <h3>Pro radost z&nbsp;nakupování</h3>
         <p>Svou zásilku už nikdy nezmeškáte. Doručí vám ji, i&nbsp;když právě
           nejste doma. A&nbsp;díky mobilní aplikaci máte o&nbsp;všem přehled.</p>
       </div>
-      <div class="mdc-layout-grid__cell">
+      <div class="icon-section__content mdc-layout-grid__cell">
+        <svg xmlns="http://www.w3.org/2000/svg" width="38" height="38" viewBox="0 0 38 38"><defs><style>.a{fill:#1538e5;}.b{fill:#fff;stroke:rgba(0,0,0,0);stroke-miterlimit:10;}</style></defs><g transform="translate(-661 -658)"><path class="a" d="M286.978,165.259v25.333l12.667,12.666h25.333V177.926l-12.667-12.667Z" transform="translate(374.022 492.741)"/><path class="b" d="M12.569,1879.2l2.789-2.789L.1,1861.154l3.051-3.051,15.253,15.254-1.525,1.525,4.314-4.315v8.629Zm-15.254-23.883H5.944l-8.629,8.629Z" transform="translate(670.686 -1190.314)"/></g></svg>
         <h3>Příjem i&nbsp;odesílání zásilek</h3>
         <p>PostCube vyzvedává a odesílá zásilky za vás. Při objednávce stačí
           zadat jen číslo schránky a při odesílání vyplnit údaje
           o&nbsp;příjemci.</p>
       </div>
-      <div class="mdc-layout-grid__cell">
+      <div class="icon-section__content mdc-layout-grid__cell">
+        <svg xmlns="http://www.w3.org/2000/svg" width="23.835" height="45.402" viewBox="0 0 23.835 45.402"><defs><style>.a{fill:#1538e5;}</style></defs><path class="a" d="M40.76,23.058l8.214-9.163L36.029,0V18.3l-7.636-7.636-2.785,2.785,9.582,9.612L25.608,32.67l2.785,2.785,7.636-7.636L36.27,45.4,49.443,32.221Zm3.623-9.133-4.432,4.432-.03-8.894ZM39.952,27.759l4.432,4.432-4.462,4.462Z" transform="translate(-25.608)"/></svg>
         <h3>Bezkontaktní a jednoduché</h3>
         <p>Kovová PostCube funguje přes Bluetooth. Nepotřebujete kabel, připojení
           k&nbsp;internetu, klíč ani si pamatovat PIN&nbsp;kód.</p>
@@ -53,5 +65,143 @@
     </div>
   </section>
 
+  <section id="" class="facts mdc-layout-grid">
+    <div class="mdc-layout-grid__inner layout-wrapper">
+      <div class="mdc-layout-grid__cell">
+        <p class="users">1024</p>
+        <p>Tolik z&nbsp;vás už PostCube používá a spokojeně nečeká na kurýra.</p>
+      </div>
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-desktop">
+        <p>Spolupracujeme s&nbsp;největšími přepravními společnostmi a e-shopy.</p>
+      </div>
+    </div>
+  </section>
 
+  <section class="testimonial mdc-layout-grid">
+    <div class="mdc-layout-grid__inner layout-wrapper">
+      <div class="testimonial__content mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+        <h2>Zásilku vám doručíme v&nbsp;rozmezí 8&ndash;18 hodin.</h2>
+        <p>Tenhle špatný vtip už nikdy neuslyšíte.</p>
+      </div>
+      <div class="testimonial__content mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+        <h2>Pokus o&nbsp;doručení nebyl úspěšný. Zásilku si vyzvedněte na
+          pobočce.</h2>
+        <p>Tyhle lístečky aby čert vzal!</p>
+      </div>
+    </div>
+  </section>
+  <section class="how-it-works icon-section mdc-layout-grid">
+    <div class="mdc-layout-grid__inner layout-wrapper">
+      <div class="after-icon icon-section__content mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-3-desktop">
+        <svg xmlns="http://www.w3.org/2000/svg" width="45.993" height="40.286" viewBox="0 0 45.993 40.286"><defs><style>.a{fill:#1538e5;}</style></defs><path class="a" d="M759.667,3078.567l.434-1.91a1.816,1.816,0,0,0,.047-.422,1.888,1.888,0,0,0-1.888-1.887H737.144l-.515-2.517H759.69a1.889,1.889,0,0,0,1.841-1.474l4.447-18.667-33.472,0-.721-3.525a1.887,1.887,0,0,0-1.846-1.51h-8.066a1.888,1.888,0,0,0-1.888,1.888v1.259a1.888,1.888,0,0,0,1.886,1.888h5.5l5.526,27.019a4.405,4.405,0,1,0,5.274.674h16.5a4.407,4.407,0,1,0,5-.818Zm-15.673-17.583v-5.651h5.9v5.651h5.4l-8.35,8.35-8.35-8.35Z" transform="translate(-719.985 -3046.657)"/></svg>
+        <h3>Objednáte online</h3>
+        <p>V&nbsp;e-shopu zadáte číslo své PostCube, vyberete dopravce a zaplatíte.</p>
+      </div>
+      <div class="after-icon icon-section__content link-icon--after-2 mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-3-desktop">
+        <svg xmlns="http://www.w3.org/2000/svg" width="46.093" height="37.662" viewBox="0 0 46.093 37.662"><defs><style>.a{fill:#1538e5;}</style></defs><path class="a" d="M792.936,2978.994h-.1v-8.632l-4.686-10.252h-9.518v-3.48a3.356,3.356,0,0,0-.034-.334v-3.2H748.036v23.7h-.016v6.907h4.724a7.062,7.062,0,0,0,14.124-.005h9.416a7.062,7.062,0,0,0,14.124,0h2.528a1.182,1.182,0,0,0,1.177-1.177v-2.351A1.182,1.182,0,0,0,792.936,2978.994Zm-33.13,8.239a3.531,3.531,0,1,1,3.53-3.534A3.53,3.53,0,0,1,759.806,2987.233Zm23.542,0h0a3.531,3.531,0,1,1,3.531-3.534A3.531,3.531,0,0,1,783.347,2987.233Zm5.884-15.3h-10.6v-8.241h7.244l3.356,7.349Z" transform="translate(-748.02 -2953.099)"/></svg>
+        <h3>Přijede kurýr</h3>
+        <p>Pomocí jednorázového kódu kurýr otevře box a vloží do něj
+          zásilku.</p>
+      </div>
+      <div class="icon-section__content mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-3-desktop">
+        <svg xmlns="http://www.w3.org/2000/svg" width="53.745" height="37.474" viewBox="0 0 53.745 37.474"><defs><style>.a{fill:#1538e5;}</style></defs><g transform="translate(-640.35 -2908.852)"><path class="a" d="M667.223,2911.974l8.391,12.654,18.482-5.208-6.075-10.568-20.8,2.924-20.8-2.924-6.075,10.568,18.482,5.208Z"/><path class="a" d="M667.256,2916.663l-6.841,10.772-14.027-3.88v17.1l20.869,5.667,20.869-5.667v-17.1l-14.027,3.88Z"/></g></svg>
+        <h3>Zásilku vyzvednete</h3>
+        <p>Okamžitě vám přijde upozornění o&nbsp;doručení balíku, který na vás ve
+          schránce&nbsp;čeká.</p>
+      </div>
+      <div class="icon-section__content mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-3-desktop">
+        <svg xmlns="http://www.w3.org/2000/svg" width="38" height="38" viewBox="0 0 38 38"><defs><style>.a{fill:#1538e5;}.b{fill:#fff;stroke:rgba(0,0,0,0);stroke-miterlimit:10;}</style></defs><g transform="translate(-1074 -2777)"><g transform="translate(-40)"><path class="a" d="M286.978,165.259v25.333l12.667,12.666h25.333V177.926l-12.667-12.667Z" transform="translate(827.022 2611.741)"/><path class="b" d="M12.569,1879.2l2.789-2.789L.1,1861.154l3.051-3.051,15.253,15.254-1.525,1.525,4.314-4.315v8.629Zm-15.254-23.883H5.944l-8.629,8.629Z" transform="translate(1123.686 928.686)"/></g></g></svg>
+        <h3>Odesílání z&nbsp;boxu</h3>
+        <p>Chcete vrátit zboží nebo odeslat zásilku? V&nbsp;aplikaci stačí vyplnit
+          údaje a balík vložit do&nbsp;boxu.</p>
+      </div>
+
+      <div class="button mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+        <a href="#contact" class="btn action-btn">Objednat PostCube</a>
+      </div>
+    </div>
+  </section>
+  <section class="get-app mdc-layout-grid">
+    <div class="mdc-layout-grid__inner layout-wrapper">
+      <div class="get-app__content mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
+        <h2>Aplikace ke stažení zdarma</h2>
+        <p>Stáhněte si aplikaci do svého mobilního telefonu a staňte se pánem
+          příjmu i&nbsp;odesílání zásilek. Vstupte do světa, kde se na zásilky
+          nečeká!</p>
+        <div class="mdc-layout-grid__inner">
+          <div class="btn mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+            <a href="/" class="download-btn">Stáhnout pro Android</a>
+          </div>
+          <div class="btn mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+            <a href="/" class="download-btn">Stáhnout pro iPhone</a>
+          </div>
+        </div>
+      </div>
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+      </div>
+    </div>
+  </section>
+  <section id="contact" class="contact">
+    <div class="mdc-layout-grid layout-wrapper">
+      <div class="mdc-layout-grid__inner">
+        <div class="contact__title mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+          <h2>Máte chuť na změnu?</h2>
+          <p>Kontaktujte nás. Rádi vám o&nbsp;PostCube řekneme více nebo vám ukážeme,
+            jak vypadá v&nbsp;reálu.</p>
+        </div>
+
+        <div
+          class="contact__form mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+          <h3>Dejte nam kontakt<br>a my se ozveme</h3>
+          <form>
+            <input datatype="Jmeno nebo nazev firmy" placeholder="Jmeno nebo nazev firmy" id="company-name" type="text">
+            <input datatype="Email" id="phone-name" placeholder="Email" type="text">
+            <div class="mdc-layout-grid__inner">
+              <div class="submit-button mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone">
+                <button type="submit" class="">ODESLAT</button>
+              </div>
+              <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone">
+                <p>Odeslanim formulare souhlasite se zpracovanim osobnich udaju.</p>
+              </div>
+            </div>
+          </form>
+        </div>
+
+        <div
+          class="contact__info mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+          <h3>Nebo se nas rovnou zeptejte</h3>
+          <a property="telephone" href="tel:+421603666420" class="info--number">+421 603 666 420</a>
+          <a property="email" href="mailto:info@postcube.cz" class="info--email">info@postcube.cz</a>
+          <div class="social-buttons">
+            <a href="" title="PostCube on Facebook" rel="me" class="facebook">
+              <svg xmlns="http://www.w3.org/2000/svg" width="34.588" height="34.379" viewBox="0 0 34.588 34.379">
+                <defs>
+                  <style>.a {
+                      fill: #fff;
+                    }</style>
+                </defs>
+                <path class="a"
+                      d="M42.588,25.294a17.294,17.294,0,1,0-20,17.085V30.293H18.2v-5h4.393v-3.81c0-4.334,2.58-6.728,6.532-6.728A26.615,26.615,0,0,1,33,15.093v4.254H30.814A2.5,2.5,0,0,0,28,22.048v3.246h4.8l-.767,5H28V42.379A17.3,17.3,0,0,0,42.588,25.294Z"
+                      transform="translate(-8 -8)"/>
+              </svg>
+            </a>
+            <a href="" title="PostCube on Instagram" rel="me" class="instagram">
+              <svg xmlns="http://www.w3.org/2000/svg" width="34.179" height="34.171" viewBox="0 0 34.179 34.171">
+                <defs>
+                  <style>.a {
+                      fill: #fff;
+                    }</style>
+                </defs>
+                <path class="a"
+                      d="M17.018,40.149a8.761,8.761,0,1,0,8.761,8.761A8.747,8.747,0,0,0,17.018,40.149Zm0,14.457a5.7,5.7,0,1,1,5.7-5.7,5.706,5.706,0,0,1-5.7,5.7ZM28.181,39.791a2.043,2.043,0,1,1-2.043-2.043A2.039,2.039,0,0,1,28.181,39.791Zm5.8,2.074c-.13-2.737-.755-5.162-2.76-7.16s-4.422-2.623-7.16-2.76c-2.821-.16-11.277-.16-14.1,0A10.165,10.165,0,0,0,2.805,34.7C.8,36.7.182,39.12.045,41.857c-.16,2.821-.16,11.277,0,14.1.13,2.737.755,5.162,2.76,7.16a10.192,10.192,0,0,0,7.16,2.76c2.821.16,11.277.16,14.1,0,2.737-.13,5.162-.755,7.16-2.76s2.623-4.422,2.76-7.16C34.144,53.135,34.144,44.686,33.984,41.865ZM30.339,58.983a5.767,5.767,0,0,1-3.248,3.248c-2.249.892-7.587.686-10.073.686s-7.831.2-10.073-.686A5.767,5.767,0,0,1,3.7,58.983c-.892-2.249-.686-7.587-.686-10.072s-.2-7.831.686-10.072A5.767,5.767,0,0,1,6.946,35.59c2.249-.892,7.587-.686,10.073-.686s7.831-.2,10.073.686a5.767,5.767,0,0,1,3.248,3.248c.892,2.249.686,7.587.686,10.072S31.231,56.741,30.339,58.983Z"
+                      transform="translate(0.075 -31.825)"/>
+              </svg>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 {% endblock %}
+{% include 'components/footer.njk' %}
+
