PostCube - Updated links in <a>

--- a/postcube.cz/src/html/index.njk
+++ b/postcube.cz/src/html/index.njk
@@ -173,7 +173,7 @@
           <a property="telephone" href="tel:+421603666420" class="info--number">+421 603 666 420</a>
           <a property="email" href="mailto:info@postcube.cz" class="info--email">info@postcube.cz</a>
           <div class="social-buttons">
-            <a href="" title="PostCube on Facebook" rel="me" class="facebook">
+            <a href="/" title="PostCube on Facebook" rel="me" class="facebook">
               <svg xmlns="http://www.w3.org/2000/svg" width="34.588" height="34.379" viewBox="0 0 34.588 34.379">
                 <defs>
                   <style>.a {
@@ -185,7 +185,7 @@
                       transform="translate(-8 -8)"/>
               </svg>
             </a>
-            <a href="" title="PostCube on Instagram" rel="me" class="instagram">
+            <a href="/" title="PostCube on Instagram" rel="me" class="instagram">
               <svg xmlns="http://www.w3.org/2000/svg" width="34.179" height="34.171" viewBox="0 0 34.179 34.171">
                 <defs>
                   <style>.a {
